Verif/Test/Invalide/test_erreur_3.94-4.deca
// Description:
//    Programme soulevant l'erreur (3.94)
// Resultats:
//    Erreur contextuelle
//    Ligne 26 : Identificateur de méthode attendu (règle 3.94)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 20/01/2012


class A {
   int x;

}

class B extends A {
}

class C extends B {
   int y() 
   A a;
   int z;
   {
    z = a.x();
   }
}